[package]
name = "rusty-wx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rusty-wx"
path = "src/main.rs"

[dependencies]
iced = { version = "0.12", features = ["tokio", "canvas"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
